# Btk-ng

./: .gitignore  .gitpod.yml  CMakeLists.txt  Doxyfile  README.md  xmake.lua
.github/workflows/: window_build_test.yml
include/Btk/: comctl.hpp  context.hpp  defs.hpp  event.hpp  font.hpp  io.hpp  layout.hpp  media.hpp  object.hpp  painter.hpp  pixels.hpp  rect.hpp  string.hpp  style.hpp  widget.hpp
include/Btk/detail/: blend.hpp  debug.hpp  device.hpp  keyboard.hpp  macro.hpp  painting.hpp  platform.hpp  reference.hpp  refptr.hpp  threading.hpp  types.hpp  wrapper.hpp
include/Btk/opengl/: opengl.hpp  opengl_macro.hpp  opengl_widget.hpp
include/Btk/plugins/: animation.hpp  barrier.hpp  builder.hpp  media.hpp  network.hpp  webview.hpp
include/Btk/service/: desktop.hpp
include/Btk/signal/: call.hpp  slot.hpp  trackable.hpp
include/Btk/widgets/: button.hpp  combobox.hpp  container.hpp  dialog.hpp  frame.hpp  mainwindow.hpp  menu.hpp  slider.hpp  textedit.hpp  view.hpp
src/: build.hpp  comctl.cpp  context.cpp  object.cpp  painting.cpp  pixels.cpp  string.cpp  style.cpp  trackable.cpp  widget.cpp
src/backend/: cario.cpp  sdl2.cpp  win32.cpp
src/backend/common/: fc_x11.hpp  mmap.hpp
src/common/: debug.hpp  device_resource.hpp  dlloader.hpp  fontconfig.hpp  mmap.hpp  painterpath.hpp  pod_container.hpp  rectpack.hpp  utils.hpp
src/common/win32/: backtrace.hpp  com.hpp  dialog.hpp  direct2d.hpp  dwmapi.hpp  dwrite.hpp  win32.hpp  wincodec.hpp
src/common/x11/: backtrace.hpp  dialog.hpp
src/core/: context.cpp  io.cpp  layout.cpp  object.cpp  painter.cpp  pixels.cpp  string.cpp  style.cpp  widget.cpp  xmake.lua
src/core/font/: dwrite.cpp  dwrite_outline.hpp  freetype.cpp  pango.cpp
src/libs/: fons_backend.hpp  fontstash.cpp  fontstash.hpp  lilim.cpp  lilim.hpp  nanovg.cpp  nanovg.hpp  nanovg_gl.hpp
src/painter/: cairo_painter.cpp  common.hpp  d2d_painter.cpp  dwrite_helper.hpp  fallback.hpp  nvg_painter.cpp
src/platform/: xmake.lua
src/platform/backend/: backend.cpp  init.cpp  sdl2.cpp  sdl2_trkey.hpp  win32.cpp
src/platform/painter/: cairo_painter.cpp  d2d_device.cpp  d2d_painter.cpp  nvg_device.cpp  nvg_painter.cpp
src/plugins/: builder.cpp  media.cpp  xmake.lua
src/plugins/media/: audio.cpp  audio_device.cpp  audio_thread.cpp  demuxer.cpp  ffmpeg_utils.hpp  media_player.cpp  media_priv.hpp  packet_queue.cpp  player.cpp  thread_api.cpp  video_thread.cpp  video_widget.cpp
src/plugins/media/dep/: player.cpp
src/plugins/webview/: webview2.cpp  webview2_loader.hpp
src/widgets/: breezestyle.cpp  button.cpp  combobox.cpp  container.cpp  dialog.cpp  frame.cpp  init.cpp  listbox.cpp  mainwindow.cpp  menu.cpp  opengl_widget.cpp  slider.cpp  textedit.cpp  view.cpp  xmake.lua
tests/: anim.cpp  combobox_test.cpp  http_test.cpp  opengl.cpp  paint.cpp  pixproc.cpp  test.cpp  win.cpp  xmake.lua
tests/media/: player.cpp
tests/webview/: broswer.cpp
tests/xml/: xmlhello.cpp
tools/: builder.xml  debugging.natvis  dllimport_gen.py  keycode_gen.py  resource_gen.py
